# freebasic

./: README.md
basic/: CMakeLists.txt  Makefile  sources.cmake
basic/include/: array.h  ast.h  builtins_convert.h  builtins_math.h  builtins_str.h  callframe.h  coerce.h  console.h  error.h  fb.h  fileio.h  interpreter.h  lexer.h  parser.h  print_using.h  symtable.h  system_api.h  token.h  udt.h  value.h
basic/src/: array.c  ast.c  builtins_convert.c  builtins_math.c  builtins_str.c  callframe.c  coerce.c  console.c  error.c  fileio.c  interpreter.c  lexer.c  main.c  parser.c  print_using.c  symtable.c  system_api.c  udt.c  value.c
basic/tests/verify/: phase1_fibonacci.bas  phase1_fizzbuzz.bas  phase1_gosub.bas  phase1_hello.bas  phase1_loops.bas  phase1_misc.bas  phase1_primes.bas  phase2_data.bas  phase2_math.bas  phase2_select.bas  phase2_strings.bas  phase2_subfunction.bas  phase2_write.bas  phase3_arrays.bas  phase3_dynamic.bas  phase3_sorting.bas  phase3_udt.bas  phase4_function.bas  phase4_hanoi.bas  phase4_scope.bas  phase4_sub.bas  phase5_random.bas  phase5_sequential.bas  phase6_err_erl.bas  phase6_error_stmt.bas  phase6_on_error.bas  phase6_robust.bas  phase6_tron.bas  phase7_datetime.bas  phase7_dirs.bas  phase7_environ.bas  phase7_milestone.bas  phase7_misc.bas  phase7_shell.bas
basic/tests/verify/phase1_expected/: fibonacci.txt  fizzbuzz.txt  gosub.txt  hello.txt  loops.txt  misc.txt  primes.txt
basic/tests/verify/phase2_expected/: data.txt  math.txt  select.txt  strings.txt  subfunction.txt  write.txt
basic/tests/verify/phase3_expected/: arrays.txt  dynamic.txt  sorting.txt  udt.txt
basic/tests/verify/phase4_expected/: function.txt  scope.txt  sub.txt
basic/tests/verify/phase5_expected/: random.txt  sequential.txt
basic/tests/verify/phase6_expected/: err_erl.txt  error_stmt.txt  on_error.txt  robust.txt  (+1 more)
platform/linux/cmake/: CMakeLists.txt
(+24 files in other folders)
